Bug 87005 - Paragraph delimiter is at wrong position
Summary: Paragraph delimiter is at wrong position
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-04 14:57 UTC by Miklos Vajna
Modified: 2014-12-05 14:47 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer document (9.35 KB, application/vnd.oasis.opendocument.text)
2014-12-04 14:57 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2014-12-04 14:57:25 UTC
Created attachment 110461 [details]
Reproducer document

The attached documents have two anchored (at paragraph) images with non-zero top margin, so there is not enough space above them to position the paragraph delimiter.

What happens: as long as the paragraph is empty, the paragraph delimiter position is between the two images, while if you type a single character, it's properly positioned at the right of the second anchored object.

What should happen: even the empty paragraph should be positioned at the right of the second anchored object.

I doubt this is intentional, I guess this is more of a bug. As a side note, if the ODT file is saved as DOC, then Word positions its paragraph mark at the right of the second anchored object as well.
Comment 1 Commit Notification 2014-12-05 12:35:11 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=25c50ff9fb0f277da9bc164d8244a774ef1ebba4

fdo#87005 SwTxtFormatter::NewPortion: fix lost SwFlyPortion

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.